--- a/index.html
+++ b/index.html
@@ -119,20 +119,43 @@
             <div id="portfolio">
                 <div class="result box">
                     <div class="category">
-                        <a href="*">All</a>
-                        <a href=".rwd">반응형웹</a>
-                        <a href=".react">React</a>
+                        <ul>
+                            <li class="on"><a href="#none">All</a></li>
+                            <li><a href="#none">Web</a></li>                            
+                            <li><a href="#none">Mobile</a></li>
+                            <li><a href="#none">반응형</a></li>
+                        </ul>
                     </div>
-                    <ul class="grid">
-                        <li class="item rwd"><a href="https://oktobat.github.io/coco220114/" title="포트폴리오 0"><img src="./img/bg1.jpg" alt="이미지1"></a></li>
-                        <li class="item react"><a href="http://www.daum.net" title="포트폴리오 1"><img src="./img/bg2.jpg" alt="이미지2"></a></li>
-                        <li class="item rwd"><a href="http://google.com" title="포트폴리오 2"><img src="./img/bg3.jpg" alt="이미지3"></a></li>
-                        <li class="item react"><a href="http://www.naver.com" title="포트폴리오 3"><img src="./img/bg4.jpg" alt="이미지4"></a></li>
-                        <li class="item rwd"><a href="http://www.daum.net" title="포트폴리오 4"><img src="./img/bg1.jpg" alt="이미지5"></a></li>
-                        <li class="item react"><a href="http://google.com" title="포트폴리오 5"><img src="./img/bg2.jpg" alt="이미지6"></a></li>
-                        <li class="item rwd"><a href="http://www.naver.com" title="포트폴리오 6"><img src="./img/bg3.jpg" alt="이미지7"></a></li>
-                        <li class="item react"><a href="http://www.daum.net" title="포트폴리오 7"><img src="./img/bg4.jpg" alt="이미지8"></a></li>
-                    </ul>
+                    <div class="content">
+                        <ul class="all on">
+                            <li class="item rwd"><a href="https://oktobat.github.io/coco220114/" title="포트폴리오 0"><img src="./img/bg1.jpg" alt="이미지1"></a></li>
+                            <li class="item react"><a href="http://www.daum.net" title="포트폴리오 1"><img src="./img/bg2.jpg" alt="이미지2"></a></li>
+                            <li class="item rwd"><a href="http://google.com" title="포트폴리오 2"><img src="./img/bg3.jpg" alt="이미지3"></a></li>
+                            <li class="item react"><a href="http://www.naver.com" title="포트폴리오 3"><img src="./img/bg4.jpg" alt="이미지4"></a></li>
+                            <li class="item rwd"><a href="http://www.daum.net" title="포트폴리오 4"><img src="./img/bg1.jpg" alt="이미지5"></a></li>
+                            <li class="item rwd"><a href="http://google.com" title="포트폴리오 5"><img src="./img/bg3.jpg" alt="이미지3"></a></li>
+                            <li class="item"></li>
+                            <li class="item"></li>
+                        </ul>
+                        <ul class="web">
+                            <li class="item rwd"><a href="http://www.daum.net" title="포트폴리오 4"><img src="./img/bg1.jpg" alt="이미지5"></a></li>
+                            <li class="item rwd"><a href="http://google.com" title="포트폴리오 5"><img src="./img/bg3.jpg" alt="이미지3"></a></li>
+                            <li class="item react"><a href="http://www.naver.com" title="포트폴리오 3"><img src="./img/bg4.jpg" alt="이미지4"></a></li>
+                            <li class="item"></li>
+                        </ul>
+                        <ul class="mobile">
+                            <li class="item rwd"><a href="http://www.daum.net" title="포트폴리오 4"><img src="./img/bg1.jpg" alt="이미지5"></a></li>
+                            <li class="item"></li>
+                            <li class="item"></li>
+                            <li class="item"></li>
+                        </ul>
+                        <ul class="uiux">
+                            <li class="item rwd"><a href="http://www.daum.net" title="포트폴리오 4"><img src="./img/bg1.jpg" alt="이미지5"></a></li>
+                            <li class="item rwd"><a href="http://google.com" title="포트폴리오 5"><img src="./img/bg3.jpg" alt="이미지3"></a></li>
+                            <li class="item"></li>
+                            <li class="item"></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
